# ha-egd-smart-metering

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  release-please-config.json  requirements-test.txt
.github/workflows/: ci.yaml  release.yaml
custom_components/egd_smart_meter/: __init__.py  api.py  config_flow.py  const.py  manifest.json  sensor.py
custom_components/egd_smart_meter/translations/: en.json
tests/: __init__.py  conftest.py  test_api.py  test_coordinator_logic.py
